# FEUP_PROG

./: README.md
P00/: calculate.cpp  range.cpp
P01/: divisors.cpp  even-odd.cpp  fizz-buzz.cpp  hello.cpp  md.cpp  pi.cpp  primes.cpp  reverse.cpp
P02/: adigits.cpp  advance.cpp  char-types.cpp  equation.cpp  pernicious.cpp
P03/: adigits  advance  bc  bc.cpp  bell  bell.cpp  complex.cpp  equation  interval.cpp  interval.h  mandelbrot.cpp  nm  nm.cpp  pell  pell.cpp  time_of_day.h
P04/: complex.h  fraction.cpp  fraction.h  hstr-to-integer.cpp  intervals.cpp  max.cpp  merge-arrays.cpp  merge-arrays_1.cpp  nrl.cpp  sum-of-fractions.cpp  time_of_day.cpp  trim.cpp
P05/: alist-append.cpp  alist.h  duplicate.cpp  expand_cdata.cpp  longest-string.cpp  median.cpp
P06/: longest-common-prefix.cpp  normalise-vector.cpp  pangram.cpp  smatrix.h  (+2 more)
Project/: CMakeLists.txt
Project/include/: Color.hpp  Command.hpp  Image.hpp  Logger.hpp  PNG.hpp  Scrim.hpp  ScrimParser.hpp  Utils.h
Project/include/Command/: Add.hpp  Blank.hpp  Chain.hpp  Crop.hpp  Fill.hpp  H_Mirror.hpp  Invert.hpp  Move.hpp  Open.hpp  Replace.hpp  Resize.hpp  Rotate_left.hpp  Rotate_right.hpp  Save.hpp  Scaleup.hpp  Slide.hpp  ToGrayScale.hpp  V_Mirror.hpp
Project/main/: RunScrim.cpp  Tester.cpp
Project/scrims/: add1.scrim  chain1.scrim  chain2.scrim  chain3.scrim  chain4.scrim  chain5.scrim  move1.scrim  move2.scrim  move3.scrim  move4.scrim  resize1.scrim  resize2.scrim  scaleup1.scrim  scaleup2.scrim  scaleup3.scrim  scaleup4.scrim  slide1.scrim  slide2.scrim  slide3.scrim  slide4.scrim
Project/scrims/more-scrims/: end2.scrim  end3.scrim  loop.scrim  loop1.scrim  loop2.scrim  start1.scrim
Project/src/: Color.cpp  Command.cpp  Image.cpp  Logger.cpp  PNG.cpp  Scrim.cpp  ScrimParser.cpp  Utils.cpp
Project/src/Command/: Add.cpp  Blank.cpp  Chain.cpp  Crop.cpp  Fill.cpp  H_Mirror.cpp  Invert.cpp  Move.cpp  Open.cpp  Replace.cpp  Resize.cpp  Rotate_left.cpp  Rotate_right.cpp  Save.cpp  Scaleup.cpp  Slide.cpp  ToGrayScale.cpp  V_Mirror.cpp
(+134 files in other folders)
